--- a/FabricaAutomoviles/FabricaAutomoviles/Base.lproj/Main.storyboard
+++ b/FabricaAutomoviles/FabricaAutomoviles/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRf-uE-nh3">
                                 <rect key="frame" x="127" y="396" width="160" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Crear Automovil Mazda"/>
+                                <state key="normal" title="Crear Automovil Mazda Eléctrico"/>
                                 <connections>
                                     <action selector="crearAutomovilMazda:" destination="q4J-xr-VwU" eventType="touchUpInside" id="OBm-NF-Ecr"/>
                                 </connections>
@@ -89,7 +89,7 @@
                                     <action selector="acelerar:" destination="ApI-4C-8bq" eventType="touchUpInside" id="6VE-fZ-Dz2"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Información" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8J1-Vr-PxN">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Información" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8J1-Vr-PxN">
                                 <rect key="frame" x="20" y="593" width="374" height="254"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
